<resources>
    <string name="app_name">Doces Kotlin</string>

    <string name="menu_drawer_open">Abrir Navegação</string>
    <string name="menu_drawer_close">Fechar Navegação</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="EntrarActivityHintPassword">Senha</string>
    <string name="EntrarActivityHintEmail">E-mail</string>
    <string name="EntrarActivityBotaoEntrar">Entrar</string>
    <string name="EntrarActivityBotaoCriarContar">Criar Conta</string>
    <string name="EntrarActivityTextViewEsqueciSenha">Esqueci Minha Senha</string>

    <string name="CadastrarUsuarioActivityNome">Nome</string>
    <string name="CadastrarUsuarioActivityEmail">E-mail</string>
    <string name="CadastrarUsuarioActivitySenha">Senha</string>
    <string name="CadastrarUsuarioActivityConfirmarSenha">Confirmar Senha</string>
    <string name="CadastrarUsuarioActivityBotaoCadastrar">Cadastrar</string>
    <string name="CadastrarUsuarioActivityTextViewVoltar">Voltar</string>

    <string name="FragmentTelaInicialTextViewSemEncomendas">Sem Encomendas...</string>

    <string name="FragmentCadastrarEncomendaHintCliente">Cliente</string>
    <string name="FragmentCadastrarEncomendaHintTelefone">Telefone</string>
    <string name="FragmentCadastrarEncomendaHintData">Data</string>
    <string name="FragmentCadastrarEncomendaHintHora">Hora</string>
    <string name="FragmentCadastrarEncomendaBotaoSalvar">Salvar</string>
    <string name="FragmentCadastrarEncomendaTextViewObs">Obs</string>

    <string name="UmaLinhaSpinnerDoceTextViewSelecione">Selecione</string>
    <string name="UmLinhaSpinnerDoceImageViewContentDescription">Imagem de um docinho em pixel art</string>

    <string name="DialogoDoceHintQuantidade">Quantidade</string>
    <string name="DialogoDoceBotaoOK">OK</string>

    <string name="ToastDadosInvalidos">Dados Inválidos</string>

    <string name="UmaLinhaEncomendaContentDescriptionImageViewCheck">Marcação de encomenda feita ou não</string>
    <string name="UmaLinhaEncomendaContentDescriptionImageViewCalendario">Ícone calendário</string>
    <string name="UmaLinhaEncomendaContentDescriptionImageViewRelogio">Ícone Relógio</string>
    <string name="UmaLinhaEncomendaContentDescriptionImageViewObs">Ícone contém observação</string>

    <string name="EncomendaMenuEditarEncomenda">Editar Encomenda</string>
    <string name="EncomendaMenuExcluirEncomenda">Excluir Encomenda</string>
    <string name="EncomendaMenuAdicionarObs">Adicionar Observações</string>
    <string name="EncomendaMenuMarcarComoFeita">Marcar como feita</string>
    <string name="EncomendaMenuCancelarEdicao">Cancelar Edição</string>

    <string name="FragmentListaDocesNenhumDoceAFazer">Nenhum Doce a Fazer...</string>

    <string name="NavigationDrawerMenuProximasEncomendas">Próximas Encomendas</string>
    <string name="NavigationDrawerMenuDocesAFazer">Doces a Fazer</string>
    <string name="NavigationDrawerMenuCadastrarEncomenda">Cadastrar Encomenda</string>
    <string name="NavigationDrawerMenuCadastrarBandejinha">Cadastrar Bandejinha</string>
    <string name="NavigationDrawerMenuFecharSemana">Fechar Semana</string>
    <string name="NavigationDrawerMenuProcurarEncomendas">Procurar Encomendas</string>
    <string name="NavigationDrawerMenuProcurarPorData">Procurar por Data</string>
    <string name="NavigationDrawerMenuProcurarPorNome">Procurar por Nome</string>
    <string name="NavigationDrawerMenuDadosSalvos">Dados Salvos</string>
    <string name="NavigationDrawerMenuDoces">Preço Doces</string>
    <string name="NavigationDrawerMenuClientes">Clientes</string>
    <string name="NavigationDrawerMenuPerfil">Perfil</string>

    <string name="DialogoRemoverDoceBotaoCancelar">Cancelar</string>
    <string name="DialogoRemoverDoceBotaoOk">OK</string>

    <string name="FragmentPerfil_imagem_do_perfil_do_usuario">Imagem do perfil do usuário</string>
    <string name="FragmentPerfil_nome">Nome</string>
    <string name="FragmentPerfil_email_text_view">E-mail</string>
    <string name="FragmentPerfil_sair_button">Sair</string>
    <string name="FragmentPerfil_atualizar_button">Atualizar</string>

    <string name="PerfilMenu_editar_perfil">Editar Perfil</string>
    <string name="PerfilMenu_mudar_senha">Mudar Senha</string>
    <string name="perfilMenu_sair">Sair</string>
    <string name="PerfilMenu_excluir_conta">Excluir Conta</string>
    <string name="PerfilMenu_cancelar_edicao">Cancelar Edição</string>

    <string name="ClienteActivityBotaoCadastrarEncomenda">Cadastrar Encomenda</string>
    <string name="ClienteActivityEditTextNomeHint">Cliente</string>
    <string name="ClienteActivityEditTextTelefoneHint">Telefone</string>
    <string name="ClienteActivityBotaoSalvar">Salvar</string>

    <string name="FragmentListaClientesTextViewSemClientes">Nenhum Cliente Encontrado</string>

    <string name="pesquisar">Pesquisar</string>
    <string name="lista_encomenda_menu_calendario_selecionar_data">Selecionar Data</string>

</resources>