<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="#807C7C"
    >



    <EditText
        android:id="@+id/DialogoDoceEditTextNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_rounded"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/roxinho"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DialogoDoceImageView"
        android:hint="@string/DialogoDoceHintQuantidade"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/DialogoDoceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/DialogoDoceBotaoOK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DialogoDoceEditTextNumero" />

    <ImageView
        android:id="@+id/DialogoDoceImageView"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beijinho"
        android:contentDescription="@string/UmLinhaSpinnerDoceImageViewContentDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>