<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".telas.ActivityEntrar">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EntrarActivityTextInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/EntrarActivityHintEmail"
            app:boxBackgroundMode="filled"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EntrarActivityTextInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/edit_text_empty"
                android:drawableEnd="@drawable/ic_baseline_alternate_email_24"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:singleLine="true"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp"
                tools:ignore="VisualLintTextFieldSize"
                android:autofillHints="emailAddress">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EntrarActivityTextInputLayoutSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/EntrarActivityHintPassword"
            app:boxBackgroundMode="filled"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EntrarActivityTextInputLayoutEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EntrarActivityTextInputEditTextSenha"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/edit_text_empty"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp"
                tools:ignore="VisualLintTextFieldSize"
                android:autofillHints="password"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/EntrarActivityBotaoEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_rounded"
            android:text="@string/EntrarActivityBotaoEntrar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EntrarActivityTextInputLayoutSenha" />

        <Button
            android:id="@+id/EntrarActivityBotaoCriarConta"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_rounded"
            android:gravity="center"
            android:text="@string/EntrarActivityBotaoCriarContar"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/EntrarActivityTextViewEsqueciSenha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EntrarActivityBotaoEntrar" />

        <ProgressBar
            android:id="@+id/EntrarActivityProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/EntrarActivityBotaoCriarConta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EntrarActivityBotaoEntrar"
            app:layout_constraintVertical_bias="0.50"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/EntrarActivityTextViewEsqueciSenha"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/EntrarActivityTextViewEsqueciSenha"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>